update primary button text to fix contrast issue

--- a/packages/shared/globals.css
+++ b/packages/shared/globals.css
@@ -28,13 +28,12 @@
 
 @layer components {
   .btn-primary {
-    @apply
-      bg-primary
+    @apply bg-primary
       hover:bg-transparent
       border-2
       border-primary
       hover:border-primary
-      text-white
+      text-black
       hover:text-primary
       px-2
       py-1
